# SPA-WASM

rustmart/: Cargo.toml
rustmart/src/: api.rs
rustmart/src/components/: navbar.rs
rustmart/src/pages/: product_detail.rs
rustmart/static/: package-lock.json  wasm.js
src/: app.rs  lib.rs  route.rs
src/components/: product_card.rs
src/pages/: home.rs
static/: index.html  package.json  wasm.d.ts  wasm_bg.wasm  wasm_bg.wasm.d.ts
static/products/: 1.json  2.json  product.json
todo_list/: Cargo.toml
todo_list/src/: lib.rs
todo_list/static/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
